# slamjvm

./: LICENSE  README.md  slamjvm.cabal  stack.yaml
app/: Main.hs
src/: Slam.hs
src/Slam/: Jar.hs
src/Slam/Jar/: Archive.hs  Manifest.hs
test/: Spec.hs
