name:                slamjvm
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/bsmt/slamjvm#readme
license:             PublicDomain
license-file:        LICENSE
author:              bsmt
maintainer:          bsmt@bsmt.me
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Slam,
                       Slam.Jar, Slam.Jar.Archive, Slam.Jar.Manifest
  build-depends:       base >= 4.7 && < 5,
                       containers, text, binary,
                       attoparsec, bytestring,
                       path, zip,
                       split
  default-language:    Haskell2010

executable slamjvm-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , slamjvm
  default-language:    Haskell2010

test-suite slamjvm-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       -- Test libraries
                       test-framework, test-framework-hunit, HUnit,
                       -- Libraries needed to use slam
                       path, bytestring,
                       slamjvm
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bastion-re/slamjvm
